--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "sails": "~0.12.1",
     "sails-auth": "^2.1.3",
     "sails-disk": "~0.10.9",
+    "sails-dynamodb": "^0.12.2",
     "sails-permissions": "^2.2.0"
   },
   "scripts": {
