fixed untracked files for QA Deployment

--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,8 @@
 
 
 
+connections.js
+local.js
 
 
 
@@ -66,7 +68,7 @@
 # 
 ################################################
 
-
+node_modules
 
 
 ################################################
