--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "keywords": [],
   "dependencies": {
     "bcrypt": "0.8.5",
+    "connect-mongo": "1.1.0",
+    "connect-redis": "1.4.5",
     "ejs": "2.3.4",
     "grunt": "0.4.5",
     "grunt-contrib-clean": "0.6.0",
